--- a/extension/styles.css
+++ b/extension/styles.css
@@ -143,17 +143,30 @@
     position: fixed; /* or absolute */
     top: 50%;
     left: 50%;
-    margin-top: -150px;
-    margin-left: -200px;
+    /* margin-top: -150px;
+    margin-left: -200px; */
   }
 
   #tipFrameContainer {
-   overflow: hidden;
+   overflow: auto;
    height: 100%;
    width: 100%;
    max-width: 500px;
-   z-index: 1000;
+   padding-top: 30px;
    display: none;
+   position: absolute;
+   z-index: 9;
+   background-color: #7b1fa2;
+   /* border: 1px solid #d3d3d3; */
+   text-align: center;
+  }
+  
+  #tipFrameContainerheader {
+    padding: 10px;
+    cursor: move;
+    z-index: 10;
+    background-color: #2196F3;
+    color: #fff;
   }
   
   .correction {
