--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -6,6 +6,11 @@ p, a {
   font-size: 14pt;
 }
 
+.tipParkerHeader {
+  height: 10px;
+  background-color: #1C6EA4;
+}
+
 /* effect-shine */
 .effect-shine:hover {
   -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
